<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/voltageChargerHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voltageChargerHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/voltageChargerLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/voltageChargerHeader"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.05"/>

    <TextView
        android:id="@+id/coilVoltageHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coilVoltageHeaderValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/voltageChargerHeader" />

    <TextView
        android:id="@+id/coilVoltageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/coilVoltageHeader"
        app:layout_constraintTop_toBottomOf="@id/voltageChargerLevel"
        app:layout_constraintHorizontal_bias="0.05"/>

    <TextView
        android:id="@+id/voltageBatteryHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/voltageBatteryHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coilVoltageHeader" />

    <TextView
        android:id="@+id/voltageBattLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/voltageBatteryHeader"
        app:layout_constraintTop_toBottomOf="@+id/coilVoltageText"
        app:layout_constraintHorizontal_bias="0.05"/>

    <TextView
        android:id="@+id/tiltAngleHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tiltAngleHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voltageBatteryHeader" />

    <TextView
        android:id="@+id/tiltAngle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@id/tiltAngleHeader"
        app:layout_constraintTop_toBottomOf="@+id/voltageBattLevel"
        app:layout_constraintHorizontal_bias="0.05"/>

    <TextView
        android:id="@+id/angularVelcoityHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/angularVelocityHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiltAngleHeader"
        app:layout_constraintHorizontal_bias="0.05"/>

    <TextView
        android:id="@+id/angularVelcoity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/angularVelcoityHeader"
        app:layout_constraintTop_toBottomOf="@+id/tiltAngle"
        app:layout_constraintHorizontal_bias="0.05" />

    <TextView
        android:id="@+id/leftWheelHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/leftWheelHeaderText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/angularVelcoityHeader" />

    <TextView
        android:id="@+id/leftWheelData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/leftWheelHeader"
        app:layout_constraintTop_toBottomOf="@+id/angularVelcoity"
        app:layout_constraintHorizontal_bias="0.05"/>

    <TextView
        android:id="@+id/rightWheelHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rightWheelHeaderText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leftWheelHeader"/>

    <TextView
        android:id="@+id/rightWheelData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/rightWheelHeader"
        app:layout_constraintTop_toBottomOf="@+id/leftWheelData"
        app:layout_constraintHorizontal_bias="0.05"/>

    <TextView
        android:id="@+id/soundDataHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soundDataHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rightWheelHeader" />

    <TextView
        android:id="@+id/soundData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/soundDataHeader"
        app:layout_constraintTop_toBottomOf="@+id/rightWheelData"
        app:layout_constraintHorizontal_bias="0.05"/>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/soundData"
        app:layout_constraintVertical_bias="1.0">

        <androidx.camera.view.PreviewView
            android:id="@+id/camera_x_preview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            />

    </FrameLayout>

    <TextView
        android:id="@+id/frameRateHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frameRateHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <TextView
        android:id="@+id/frameRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/frameRateHeader"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:layout_constraintHorizontal_bias="0.05"/>

    <TextView
        android:id="@+id/objectDetectorHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/objectDetectorHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameRateHeader" />

    <TextView
        android:id="@+id/objectDetector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/objectDetectorHeader"
        app:layout_constraintTop_toBottomOf="@+id/frameRateHeader"
        app:layout_constraintHorizontal_bias="0.05"/>

    <TextView
        android:id="@+id/qrDataHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qrDataHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/objectDetectorHeader" />

    <TextView
        android:id="@+id/qrData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/frameRateHeader"
        app:layout_constraintTop_toBottomOf="@+id/objectDetectorHeader"
        app:layout_constraintHorizontal_bias="0.05"/>
</androidx.constraintlayout.widget.ConstraintLayout>